TTS support added (controls still needed on web).  In MainActivity, speech can be access via mSpeechHelper.  Here are the fun things you can do:
mSpeechHelper.setLanguage(Language);
   Available options are US_ENGLISH, UK_ENGLISH, FRENCH, GERMAN, ITALIAN, and MEXICAN_SPANISH

mSpeechHelper.setPitch(Pitch);
   Available options are HIGHEST, HIGHER, HIGH, NORMAL, LOW, LOWER, and LOWEST

mSpeechHelper.setRate(Rate);
   Available options are FASTEST, FASTER, FAST, NORMAL, SLOW, SLOWER, and SLOWEST

mSpeechHelper.say("Here is something to say");

mSpeechHelper.shutup();
   Calls to "say" will stop any active speech, but this can be used to stop speech without another "say" request

* On startup the app will query the TTS engine for voice availability and open the play store to the TTS downloader page if needed.

--- a/Fridgeface/res/values/strings.xml
+++ b/Fridgeface/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Fridgeface</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="face_goes_here">FACE GOES HERE</string>
+    <string name="tts_startup">Fridge Face Ready</string>
 
 </resources>
