--- a/Fridgeface/app/src/main/res/values/strings.xml
+++ b/Fridgeface/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="face_goes_here">FACE GOES HERE</string>
     <string name="tts_startup">Fridge Face Ready</string>
+    <string name="error_no_connection">No connection</string>
 
 </resources>
